# wslpath-python

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml  mypy.yml
wslpath/: __init__.py  _wslpath.py
