[metadata]
name = wslpath-python
version = 0.0.1
author = Maciej Falbogowski
author_email = maciej.falbogowski@gmail.com
description = Python package for calling wslpath command in WSL environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LoGosX/wslpath-python
project_urls =
    Bug Tracker = https://github.com/LoGosX/wslpath-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = wslpath
packages = find:
python_requires = >=3.4

[options.packages.find]
where = wslpath

[options.package_data]
cfec = py.typed
